removed twitter icon; fixed hard mode; realigned the nos closely; starting point anim

--- a/style.css
+++ b/style.css
@@ -38,4 +38,5 @@ border:1px solid;
 .socialIcon {
     width: 30%;
     height: 98%;
+    padding-left: 10%;
 }
